[gd_scene load_steps=2 format=2]

[ext_resource path="res://game/items/GrowthItem.gd" type="Script" id=1]

[node name="GrowthItem" type="RigidBody2D"]
z_index = 16
collision_layer = 0
collision_mask = 0
script = ExtResource( 1 )

[node name="CoolDown" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="Sprite" type="Sprite" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Sprite")

[node name="Body" type="CollisionShape2D" parent="."]

[node name="Detector" type="Area2D" parent="."]
modulate = Color( 0.760784, 0, 0, 1 )
collision_layer = 0
collision_mask = 0

[node name="PickableArea" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickableArea"]

[connection signal="timeout" from="CoolDown" to="." method="_on_CoolDown_timeout"]
[connection signal="body_entered" from="Detector" to="." method="_on_Detector_body_entered"]
[connection signal="mouse_entered" from="PickableArea" to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="PickableArea" to="." method="_on_mouse_exited"]
